--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "firebase": "^11.4.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
