--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -28,7 +28,7 @@
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
@@ -45,18 +45,23 @@
     "cmdk": "1.0.4",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.5.2",
     "firebase": "^11.4.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "9.5.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.14.1",
+    "sonner": "^2.0.1",
     "tailwind-merge": "3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
+    "yet-another-react-lightbox": "^3.21.8",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
   },
