--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.1",
     "recharts": "^2.14.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "3.0.2",
