--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
+    "react-window": "^2.2.1",
     "recharts": "^2.14.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "3.0.2",
